feat(vibe): iam ui, update partner
